# Local_filesearch_agent

./: .env.template  .gitignore  README.md  SETUP_README.md  __init__.py  api_server.py  app.py  everything-setup.bat  experiment.ipynb  file_paths.json  main.py  manage_backend.bat  pyproject.toml  requirements.txt  run.bat  setup_agent.bat  setup_agent.ps1  setup_agent2.bat  setup_agent2.ps1  setup_desktop_app.bat  setup_desktop_app.ps1  update_backend.bat  update_frontend.bat  update_manager.py
agents/: __init__.py  file_search_agent.py  filesearch_agent.py  prompt.txt
config/: __init__.py  settings.py
docs/: modernization_plan.md
frontend/: README.md  app.js  electron-main.js  index.html  package-lock.json  package.json  styles.css
mcp/: mcp_server.py
tools/: __init__.py  file_tools.py
ui/: __init__.py  components.py
utils/: __init__.py  sementic_search_engine.py  state_manager.py  text_splitter.py
